<resources>
    <string name="app_name">Archaeological Fieldwork</string>
    <string name="Loading">Loading...</string>
    <string name="button_addRingfort">Add Ringfort</string>
    <string name="ringfortName">Ringfort Name</string>
    <string name="addRingfort">Ringfort</string>
    <string name="ringfortDescription">Ringfort Description</string>
    <string name="menu_addRingfort">Add</string>
    <string name="menu_cancelRingfort">Cancel</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_ringfort_details"> Please enter a Ringfort Name &amp; Description </string>
    <string name="save_ringfort"> Save </string>
    <string name="button_addImage"> Select Image </string>
    <string name="select_ringfort_image">Select Ringfort image</string>
    <string name="change_ringfort_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_ringfort_maps">Map</string>
    <string name="menu_deletelRingfort">Delete</string>
    <string name="notReg">Not Registered? Register here</string>
    <string name="emailHint">Enter Email</string>
    <string name="passwordHint">Enter password</string>
    <string name="nameHint">Enter Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Userdetails">Please enter email and password</string>
    <string name="title_activity_test_nav">testNav</string>
    <string name="settings">User Settings</string>
    <string name="logout">Logout</string>
    <string name="hint_visited">Have you visited this Ringfort?</string>
    <string name="hint_visitedDate">Enter Date you Visited</string>
    <string name="check_title">Visited</string>
    <string name="save_settings">Save</string>
    <string name="user_settings">Settings</string>
    <string name="all_maps">Map</string>
    <string name="title_activity_ringfort_all_maps">Map of all Ringforts</string>
    <string name="ringfort_image_placeholder">Ringfort Image</string>
    <string name="ringfort_name_placeholder">Ringfort Name</string>
    <string name="ringfort_description_placeholder">Ringfort Description</string>
    <string name="menu_save_ringfortk">Save</string>
    <string name="title_activity_ringfort_list">Ringforts</string>
    <string name="title_activity_ringfort">Ringforts</string>
    <string name="title_activity_edit_location">Ringforts</string>
</resources>
