<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/green_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/Lname"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="5dp"
        android:background="@color/colorAccent"
        android:hint="@string/emailHint" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/Lpassword"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="5dp"
        android:background="@color/colorAccent"
        android:hint="@string/passwordHint" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="Login"
        android:background="@color/orange"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Or sign in with your Google account"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:textColor="@color/colorAccent"-->
<!--        android:textSize="15sp"-->
<!--        android:textStyle="bold" />-->

<!--    <LinearLayout-->
<!--        android:id="@+id/googleSignInButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/emailPasswordButtons"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingLeft="16dp"-->
<!--        android:paddingRight="16dp"-->
<!--        android:layout_marginTop="10dp">-->

<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:id="@+id/sign_in_button"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1" />-->

<!--    </LinearLayout>-->

        <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/tvreg"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:clickable="true"
        android:text="@string/notReg"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="196dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvreg" />

</LinearLayout>