<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="views.ringfort.RingfortView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/smokeyWhite">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorAccent"
            android:background="@color/colorPrimary"/>

            </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="19dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ringfortDescription" />

            <EditText
                android:id="@+id/ringfortDescription"
                android:layout_width="240dp"
                android:layout_height="62dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/ringfortDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/lat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ringfortName" />

            <EditText
                android:id="@+id/ringfortName"
                android:layout_width="240dp"
                android:layout_height="62dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="72dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/ringfortName"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/lat"
                android:layout_width="95dp"
                android:layout_height="19dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="00.000000"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ringfortName" />

            <TextView
                android:id="@+id/lng"
                android:layout_width="92dp"
                android:layout_height="19dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="00.000000"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lat" />

            <ImageView
                android:id="@+id/ringfortImage"
                android:layout_width="396dp"
                android:layout_height="110dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView1"
                android:layout_width="363dp"
                android:layout_height="162dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="181dp"
                android:layout_marginBottom="152dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ringfortImage" />

            <TextView
                android:id="@+id/visitedDateL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/date"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hint_visitedDate"
                android:inputType="date"
                android:text="Select a date you visited"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/visitedL"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="96dp" />

            <CheckBox
                android:id="@+id/visitedL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="6dp"
                android:text="Have you visited this ringfort?"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/MyCheckbox"
                app:layout_constraintTop_toBottomOf="@+id/mapView1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="96dp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/visitedDateL" />

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:layout_width="44dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/heart"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ringfortName"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>